@@ -4,11 +4,14 @@
  **********************************************/
 
 /* required functions */
+require_once( dirname(__FILE__) . '/../../functions/functions.php' );
 # no errors!
 ini_set('display_errors', 0);
 
+$type = "IPv4";
+
 # get subnets statistic
-$subnetHost = getSubnetStatsDashboard("IPv4", "0");
+$subnetHost = getSubnetStatsDashboard($type, 0);
 
 $max = 0;
 if(sizeof($subnetHost) != 0) {
@@ -199,10 +202,3 @@ $(function () {
     $.plot($("#<?php print $type; ?>top10"), [ data ], options);
 });
 </script>
-
-
-
-<!-- graph holder -->
-<div id="<?php print $type; ?>top10" class="top10"  style="height:200px;width:95%;margin-left:3%;">
-	<div class="alert alert-warn"><strong><?php print _('Info'); ?>:</strong> <?php print _("No $type host configured"); ?>!</div>
-</div>
