@@ -24,6 +24,7 @@
 	+ Added mod_rewrite error detection on installation and upgrade;
 	+ Added hostname validation;
 	+ Added Hostfile dump of IP addresses;
+	+ Search also searches in custom fields;
 
 	Bugfixes:
 	------------------------
